<resources>
    <string name="app_name">GBCamera Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GBCamera Manager</string>
    <string name="nav_header_subtitle">Github</string>
    <string name="nav_header_wiki">Wiki</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_palettes">Palettes</string>
    <string name="menu_frames">Frames</string>
    <string name="menu_import">Import</string>
    <string name="menu_usbserial">USB Serial</string>
    <string name="menu_gbstorage">GB Storage</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_show_palettes">Show palettes</string>
    <string name="btn_show_frames">Show frames</string>
    <string name="cb_keep_frame">Keep frame color</string>
    <string name="cb_crop">Crop</string>
    <string name="toast_printing">Printing, please wait...</string>
    <string name="toast_saved">SAVED</string>
    <string name="toast_saved_txt">Saved as TXT</string>
    <string name="loading">Loading...</string>
    <string name="total_images">Total of images:\u0020</string>
    <string name="no_images">No images in the gallery. Go to Import tab</string>
    <string name="export_txt">Export as TXT.</string>
    <string name="export_png">Export as PNG.</string>
    <string name="png_size">PNG size:\u0020</string>
    <string name="images_page">Select images per page:\u0020</string>
    <string name="language">Language (needs restart):\u0020</string>
    <string name="export_location_label">Export save location</string>
    <string name="export_location_choose">Choose folder</string>
    <string name="export_location_reset">Reset to default</string>
    <string name="export_location_default_value">Downloads/GBCamera Manager</string>
    <string name="export_location_custom_value">Custom folder: %1$s</string>
    <string name="cant_delete_base">Can\'t delete a base frame</string>
    <string name="delete_frame_dialog">Delete frame\u0020</string>
    <string name="sure_dialog">Are you sure?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">Cancel</string>
    <string name="frames_total">Total frames:\u0020</string>
    <string name="btn_add_palette">Add palette</string>
    <string name="btn_export_json">Export Json</string>
    <string name="long_press_delete_palette">Long press to delete</string>
    <string name="cant_delete_base_palette">Can\'t delete a base palette</string>
    <string name="toast_palettes_json">Palettes Json saved.</string>
    <string name="set_palette_name">*Set Palette Name*</string>
    <string name="sure_dialog_palette">Are you sure?\nDoing a Json export is recommended before continuing.</string>
    <string name="delete_dialog_palette">Delete palette\u0020</string>
    <string name="choose_color">Choose color</string>
    <string name="selected_color">Selected Color: #</string>
    <string name="toast_palettes_error">2 palettes can\'t have the same id.</string>
    <string name="palette_added">Palette added</string>
    <string name="btn_save">Save</string>
    <string name="btn_decode">Decode</string>
    <string name="btn_select_file">Select file</string>
    <string name="tv_select_file">Select a file to import</string>
    <string name="btn_extract_file">Extract file</string>
    <string name="btn_add_images">Add images</string>
    <string name="btn_add_palettes">Add palettes</string>
    <string name="btn_add_frames">Add frames</string>
    <string name="no_valid_list">Not a valid list</string>
    <string name="images_available">\u0020images available.</string>
    <string name="no_new_palettes">No new palettes added.</string>
    <string name="no_new_frames">No new frames added.</string>
    <string name="no_new_images">No new images added.</string>
    <string name="images_added">Images added:\u0020</string>
    <string name="done_adding_images">\u0020images added!</string>
    <string name="palettes_added">Palettes added.</string>
    <string name="done_adding_palettes">Done adding palettes!</string>
    <string name="frames_added">Frames added.</string>
    <string name="done_adding_frames">Done adding frames!</string>
    <string name="no_valid_file">Not a valid file.</string>
    <string name="cb_last_seen">Last seen.</string>
    <string name="cb_deleted_images">Deleted images.</string>
    <string name="rb_print">Print to Arduino - GBP</string>
    <string name="btn_read_rom_name">Read Rom Name</string>
    <string name="btn_read_ram">Read and Save Ram</string>
    <string name="btn_dump_photo">Dump Full PHOTO! ROM</string>
    <string name="btn_view_rom_images">View ROM images</string>
    <string name="btn_print_banner">Print test banner</string>
    <string name="btn_print_image">Print image</string>
    <string name="btn_delete_sav">Delete SAV</string>
    <string name="tv_sleep_time">Choose sleep time:\u0020</string>
    <string name="error_print_image">Error in PRINT IMAGE</string>
    <string name="delete_sav_dialog">Delete sav?</string>
    <string name="sure_delete_sav">Are you sure to delete\u0020</string>
    <string name="toast_sav_deleted">SAV deleted.</string>
    <string name="toast_couldnt_delete_sav">Couldn\'t delete SAV.</string>
    <string name="deleted_sav">Deleted\u0020</string>
    <string name="tv_connected">//Connected\n</string>
    <string name="error_arduino">Error in Arduino\n.</string>
    <string name="arduino_mode">Arduino Printer Emulator MODE</string>
    <string name="print_mode">PRINT MODE</string>
    <string name="gbxcart_mode">GBxCart Reader MODE</string>
    <string name="rb_picnrec">PicNRec</string>
    <string name="picnrec_mode">PicNRec MODE</string>
    <string name="btn_read_picnrec">Read PicNRec images</string>
    <string name="picnrec_detecting">Detecting PicNRec...</string>
    <string name="picnrec_reading">Reading PicNRec images...</string>
    <string name="picnrec_import_ready">PicNRec images ready to add:\u0020</string>
    <string name="picnrec_no_images">No importable PicNRec images found.</string>
    <string name="picnrec_error">Error reading PicNRec: </string>
    <string name="btn_import_picnrec_range">Import PicNRec range</string>
    <string name="picnrec_clear_button">Clear PicNRec memory</string>
    <string name="picnrec_clearing">Clearing PicNRec memory...</string>
    <string name="picnrec_cleared">PicNRec last photo index set to 0.</string>
    <string name="picnrec_clear_failed">Error clearing PicNRec: </string>
    <string name="picnrec_clear_confirm_title">Clear PicNRec memory?</string>
    <string name="picnrec_clear_confirm_message">This does not erase the underlying photo data on the PicNRec. It only sets the last photo index to 0, so the device appears empty until new photos are taken.</string>
    <string name="picnrec_clear_confirm_action">Clear memory</string>
    <string name="picnrec_start_image">Start image</string>
    <string name="picnrec_end_image">End image</string>
    <string name="picnrec_first">First</string>
    <string name="picnrec_first_caps">FIRST</string>
    <string name="picnrec_current">Current</string>
    <string name="picnrec_last">Last</string>
    <string name="picnrec_preview_slot">Preview slot</string>
    <string name="picnrec_preview_hint">Move the slider to preview a PicNRec slot.</string>
    <string name="picnrec_previewing">Previewing PicNRec slot\u0020</string>
    <string name="picnrec_preview_loaded">Preview loaded for PicNRec slot\u0020</string>
    <string name="picnrec_preview_failed">Preview failed: </string>
    <string name="picnrec_range_invalid">Invalid PicNRec range:\u0020</string>
    <string name="picnrec_range_whole_numbers">Enter whole-number start and end image numbers.</string>
    <string name="picnrec_range_start_bounds">Start must be between 1 and 18720.</string>
    <string name="picnrec_range_end_bounds">End must be between start and 18720.</string>
    <string name="picnrec_range_incomplete_slot">The reported last slot is incomplete and cannot be selected.</string>
    <string name="picnrec_device_info">Last usable slot: %1$d | max slot: %2$d</string>
    <string name="picnrec_importing_range">Reading PicNRec range %1$d-%2$d...</string>
    <string name="rb_pico_gb_serial">Pico GB Serial</string>
    <string name="pico_gb_serial_mode">Pico GB Serial MODE</string>
    <string name="pico_gb_serial_contacting">Contacting Pico GB Serial...</string>
    <string name="pico_gb_serial_receiving">Receiving mode. Queued: %1$d | last: %2$d bytes | replay: %3$d bytes</string>
    <string name="pico_gb_serial_receiving_no_status">Receiving mode. Waiting for Pico GB Serial captures.</string>
    <string name="pico_gb_serial_received">Capture %1$d received. Added %2$d image(s). Incoming buffer: %3$d</string>
    <string name="pico_gb_serial_cleared">Pico GB Serial clear acknowledged.</string>
    <string name="pico_gb_serial_clear_failed">Pico GB Serial clear failed: </string>
    <string name="pico_gb_serial_poll_failed">Pico GB Serial queue poll failed: </string>
    <string name="pico_gb_serial_error">Error reading Pico GB Serial: </string>
    <string name="pico_gb_serial_control_warning">Pico GB Serial USB control warning: </string>
    <string name="pico_gb_serial_auto_import">Auto import</string>
    <string name="pico_gb_serial_import_buffer">Import buffer</string>
        <string name="pico_gb_serial_auto_delete_duplicates">Automatically delete duplicates</string>
        <string name="pico_gb_serial_import_tag_hint">Import tag</string>
        <string name="pico_gb_serial_import_selected">Import selected</string>
        <string name="pico_gb_serial_clear_buffer">Clear buffer</string>
        <string name="pico_gb_serial_clear_selected">Clear selected</string>
        <string name="pico_gb_serial_select_all">Select all</string>
        <string name="pico_gb_serial_select_none">Select none</string>
    <string name="images_list">\nImages in the list:\u0020</string>
    <string name="no_good_dump">\nNOT A GOOD SAVE DUMP.</string>
    <string name="sav_parts">\nSav parts:\u0020</string>
    <string name="rom_name">\nThe ROM name is:\u0020</string>
    <string name="dialog_close_button">Close</string>
    <string name="share">Share</string>
    <string name="square_download">Export square image</string>
    <string name="export_dialog_size_prompt">Choose export size:</string>
    <string name="menu_filter">Filter by tag</string>
    <string name="menu_sort">Sort</string>
    <string name="export_metadata">Export metadata on PNG</string>
    <string name="add_neutral_rgb">Add neutral</string>
    <string name="rgb_grouping_by_image">By image (RGBRGBRGB)</string>
    <string name="rgb_grouping_by_color">By color (RRRGGGBBB)</string>
    <string name="rgb_grouping_label">Grouping</string>
    <string name="average_rgb_aeb_label">AEB steps</string>
    <string name="rgb_channel_order_label">Channel order</string>
    <string name="rgb_position_one">Position 1</string>
    <string name="rgb_position_two">Position 2</string>
    <string name="rgb_position_three">Position 3</string>
    <string name="rgb_position_four">Position 4</string>
    <string name="gbstorage_server_address">Server address</string>
    <string name="gbstorage_api_key">API key</string>
    <string name="gbstorage_timestamp_source">Timestamp source</string>
    <string name="gbstorage_test_connection">Test connection</string>
    <string name="gbstorage_save_settings">Save GB Storage settings</string>
    <string name="gbstorage_settings">GB Storage settings</string>
    <string name="gbstorage_remote_refresh">Refresh remote gallery</string>
    <string name="gbstorage_remote_sync_selected">SYNC selected to local gallery</string>
</resources>