<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.mraulio.gbcameramanager.utils.TouchImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/btn_delete_extra"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:visibility="gone"
                android:backgroundTint="@color/listview_selected"
                android:text="@string/delete" />
            <Button
                android:id="@+id/btn_close_extra"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/dialog_close_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_share_extra"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_marginHorizontal="2dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:contentDescription="@string/share"
                app:icon="@drawable/ic_share"
                app:iconGravity="textTop"
                app:iconPadding="0dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_extra"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="2dp"
                android:visibility="gone"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:backgroundTint="@color/save_color"
                android:contentDescription="@string/btn_save"
                app:icon="@drawable/ic_download"
                app:iconGravity="textTop"
                app:iconPadding="0dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
