<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/rg_export_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbExportPng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_png" />

        <RadioButton
            android:id="@+id/rbExportTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_txt" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbExportMetadataDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/export_metadata" />

    <CheckBox
        android:id="@+id/cbExportSquareDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square_download" />

    <TextView
        android:id="@+id/tvExportSizePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/export_dialog_size_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btnExport1x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="1x" />

            <Button
                android:id="@+id/btnExport2x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="2x" />

            <Button
                android:id="@+id/btnExport3x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="3x" />

            <Button
                android:id="@+id/btnExport4x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="4x" />

            <Button
                android:id="@+id/btnExport5x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="5x" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/btnExport6x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="6x" />

            <Button
                android:id="@+id/btnExport7x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="7x" />

            <Button
                android:id="@+id/btnExport8x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="8x" />

            <Button
                android:id="@+id/btnExport9x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="9x" />

            <Button
                android:id="@+id/btnExport10x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="10x" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>